# noxton

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: docs.yml
docs/: examples.md  getting-started.md  index.md  nn.md
docs/models/: alexnet.md  clip.md  convnext.md  efficientnet.md  esm.md  resnet.md  swin-transformer.md
docs/nn/: attention.md  convolution.md  embedding.md  linear.md  mamba.md  normalization.md  regularization.md  transformer.md
examples/: alexnet_inference.py  clip_inference.py  convnext_inference.py  efficientnet_inference.py  index.html  resnet_inference.py  swin_transformer_inference.py
getting-started/: index.html
models/alexnet/: index.html
models/clip/: index.html
models/convnext/: index.html
models/efficientnet/: index.html
models/esm/: index.html
models/resnet/: index.html
models/swin-transformer/: index.html
nn/: index.html
nn/attention/: index.html
nn/convolution/: index.html
nn/embedding/: index.html
nn/linear/: index.html
nn/mamba/: index.html
nn/normalization/: index.html
nn/regularization/: index.html
nn/transformer/: index.html
noxton/functions/: __init__.py  activation.py  attention.py  embedding.py  geometry.py  initialization.py  linalg.py  masking.py  (+3 more)
search/: search_index.json
tests/: test_affine.py  test_attention.py  test_batch_norm.py  test_efficientnet_layers.py  test_esm_layers.py  test_layernorm.py  test_local_response_norm.py  test_mha.py  test_swin_layers.py  test_transformer.py  test_xlstm.py
(+30 files in other folders)
