[project]
name = "noxton"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.4",
    "ftfy>=6.3.1",
    "jax>=0.9.0.1",
    "statedict2pytree>=2.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
